--- a/pythonanywhere/templates/scheduler.html
+++ b/pythonanywhere/templates/scheduler.html
@@ -878,7 +878,10 @@
         font-size: 8px; /* Adjust font size for smaller screens */
       }
       header {
-        width: 196%;
+        width: 91%;
+      }
+      #attach-note-button {
+        display:none;
       }
     }
 
@@ -889,7 +892,7 @@
       align-items: center;
       gap: 1rem;
       padding: 10px;
-      background-color: #3a3a3a;
+      background-color: rgb(97, 97, 97); /* Matches the calendar grid header */
       border-bottom: 1px solid #424242;
       position: sticky; /* Ensures the buttons stay on top on scroll */
       top: 0;
