--- a/pythonanywhere/templates/scheduler.html
+++ b/pythonanywhere/templates/scheduler.html
@@ -443,6 +443,7 @@
       color: #e0e0e0;
       padding: 2px 4px;
       box-sizing: border-box;
+      cursor: pointer;
       border-radius: 0;
       overflow: hidden;
       z-index: 10;
