--- a/pythonanywhere/templates/scheduler.html
+++ b/pythonanywhere/templates/scheduler.html
@@ -1217,7 +1217,7 @@
     });
 
     function showModal() {
-      window.location.href = "/login_page";
+      window.location.href = "/login_page?redirect=/scheduler-page";
     }
     function hideModal() {
       document.getElementById("modal-overlay").style.display = "none";
